--- a/IRS/packages.config
+++ b/IRS/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="boost" version="1.80.0" targetFramework="native" />
+  <package id="boost_filesystem-vc143" version="1.80.0" targetFramework="native" />
+  <package id="boost_log_setup-vc143" version="1.80.0" targetFramework="native" />
+  <package id="boost_log-vc143" version="1.80.0" targetFramework="native" />
+  <package id="boost_thread-vc143" version="1.80.0" targetFramework="native" />
 </packages>
