completed term structures class

--- a/IRS/IRS.vcxproj
+++ b/IRS/IRS.vcxproj
@@ -127,10 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="IRS.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="TermStructure.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LinearInterpolation.h" />
+    <ClInclude Include="TermStructure.h" />
+    <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
