--- a/IRS/IRS.vcxproj
+++ b/IRS/IRS.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Greek.cpp" />
     <ClCompile Include="Instrument.cpp" />
     <ClCompile Include="LinearInterpolation.cpp" />
     <ClCompile Include="main.cpp" />
@@ -140,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="Bootstrapper.h" />
     <ClInclude Include="Defines.h" />
+    <ClInclude Include="Greek.h" />
     <ClInclude Include="Instrument.h" />
     <ClInclude Include="LinearInterpolation.h" />
     <ClInclude Include="Pricer.h" />
