--- a/IRS/IRS.vcxproj.filters
+++ b/IRS/IRS.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Instrument.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Greek.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Pricer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Greek.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
